--- a/webUI/src/index.html
+++ b/webUI/src/index.html
@@ -1,14 +1,38 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <title>WebUI</title>
+  <title>MS4.org</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--CSS-->
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
 </head>
+
 <body>
-  <app-root>Loading...</app-root>
+  <nav class="light-blue lighten-1" role="navigation">
+    <div class="nav-wrapper container">
+      <img src="https://www.cityofchicago.org/etc/designs/city/images/city-of-chicago-logo.png" />
+    </div>
+  </nav>
+
+<app-root>Loading...</app-root>
+
+  
+
+
+
+
+
+  <!--js-->
+
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 </body>
+
 </html>
