set some samples

--- a/WebUI.v1/index.html
+++ b/WebUI.v1/index.html
@@ -16,8 +16,8 @@
                 </div>
             </div>
         </nav>
-        <div class="container" style="margin-top:40px;">
-            <!--<ui-view></ui-view>-->
+        <div class="container" style="margin-top:60px;" ng-controller="appCtrl as vm">
+            <!--<ui-view></ui-view>--> {{vm.appName}}<br />{{vm.appDesc}}
         </div>
     </div>
 
