--- a/WebUI.v1/index.html
+++ b/WebUI.v1/index.html
@@ -5,6 +5,12 @@
     <title>CHI-MS4.ORG</title>
 
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="Content/docs.min.css" rel="stylesheet" />
+    <style>
+        .nav > li > a {
+            padding:2px 5px;
+        }
+    </style>
 
 </head>
 <body style="background-color:#e3f2fd;">
@@ -18,7 +24,37 @@
             </div>
         </nav>
         <div class="container" style="margin-top:60px;">
-            <ui-view></ui-view> 
+            <div class="row">
+                <div class="col-lg-9">
+                    <ui-view></ui-view> 
+                </div>
+                <div class="col-lg-3">
+                    <nav class="bs-docs-sidenav">
+                        <ul class="nav bs-docs-sidenav">
+                            <li><a ui-sref="home">Home</a></li>
+                            <li><a ui-sref="dashboard">dashboard</a></li>
+                            <li>
+                                <input type="file" id="selFile" file-model accept=".pdf,.jpg,.jpeg,.png,.doc,.docx" multiple style="display:none" />
+                                <a 
+                                   onclick="document.getElementById('selFile').click();"
+                                   popover-title="Attach files"
+                                   popover-trigger="'mouseenter'"
+                                   uib-popover="Allowed file types are pdf, jpg, jpeg, png, doc, docx and file size must be less than 5MB.">
+                                    Upload <span class="badge" ng-if="files.length>0">{{files.length}}</span>
+                                </a>
+                                <!--<p style="margin-left:5px;">
+                                    <small class="text-muted">
+                                        Allowed file types are pdf, jpg, jpeg, png, doc, docx and file size must be less than 5MB.
+                                    </small>
+                                </p>-->
+
+
+                            </li>
+                        </ul>
+                    </nav>
+                </div>  
+            </div>
+            
         </div>
     </div>
 
