--- a/WebUI.v1/index.html
+++ b/WebUI.v1/index.html
@@ -66,6 +66,7 @@
     <script src="Scripts/angular.min.js"></script>
     <script src="Scripts/angular-ui-router.min.js"></script>
     <script src="Scripts/angular-animate.min.js"></script>
+    <script src="Scripts/angular-mocks.js"></script>  <!--for testing-->
     <script src="Scripts/angular-ui/ui-bootstrap.min.js"></script>
     <script src="Scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
     <script src="Scripts/app-chi-ms4.js"></script>
