--- a/WebUI.v1/test/SpecRunner.html
+++ b/WebUI.v1/test/SpecRunner.html
@@ -13,8 +13,10 @@
 
     <script src="../Scripts/angular.min.js"></script>
     <script src="../Scripts/angular-mocks.js"></script>
-
+    <script src="../Scripts/angular-ui-router.min.js"></script>
+    <script src="../Scripts/angular-ui/ui-bootstrap.min.js"></script>
     <!-- test unit -->
+    <script src="../app/app.js"></script>
     <script src="../app/components/login.js"></script>
     <script src="spec/loginSpec.js"></script>
 </head>
