update load loop

--- a/WebUI.v1/index.html
+++ b/WebUI.v1/index.html
@@ -25,27 +25,27 @@
         </nav>
         <div class="container" style="margin-top:60px;">
             <div class="row">
-                <div class="col-lg-9">
+                <div class="col-lg-12">
                     <ui-view></ui-view> 
                 </div>
-                <div class="col-lg-3">
+                <!--<div class="col-lg-3">
                     <nav class="bs-docs-sidenav">
                         <ul class="nav bs-docs-sidenav">
                             <li><a ui-sref="home">Home</a></li>
                             <li><a ui-sref="dashboard">dashboard</a></li>
                             <li>
                                
-                                <!--<p style="margin-left:5px;">
+                                <p style="margin-left:5px;">
                                     <small class="text-muted">
                                         Allowed file types are pdf, jpg, jpeg, png, doc, docx and file size must be less than 5MB.
                                     </small>
-                                </p>-->
+                                </p>
 
 
                             </li>
                         </ul>
                     </nav>
-                </div>  
+                </div>-->  
             </div>
             
         </div>
