--- a/WebUI.v1/index.html
+++ b/WebUI.v1/index.html
@@ -6,11 +6,7 @@
 
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="Content/docs.min.css" rel="stylesheet" />
-    <style>
-        .nav > li > a {
-            padding:2px 5px;
-        }
-    </style>
+    <link href="Content/my-style.css" rel="stylesheet" />
 
 </head>
 <body style="background-color:#e3f2fd;">
