--- a/WebUI.v1/index.html
+++ b/WebUI.v1/index.html
@@ -58,6 +58,20 @@
     <script src="Scripts/angular-mocks.js"></script>  <!--for testing-->
     <script src="Scripts/angular-ui/ui-bootstrap.min.js"></script>
     <script src="Scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
-    <script src="Scripts/app-chi-ms4.js"></script>
+    
+
+    <script src="app/app.js"></script>
+    <script src="app/config/router.js"></script>
+    <script src="app/config/services.js"></script>
+    <script src="app/components/login.js"></script>
+    <script src="app/components/dashboard.js"></script>
+    <script src="app/components/display-files.js"></script>
+    <script src="app/directives/fileModel.js"></script>
+
+    <!--<script src="Scripts/app-chi-ms4.js"></script>-->
+
+
+
+
 </body>
 </html>
