--- a/WebUI.v1/index.html
+++ b/WebUI.v1/index.html
@@ -6,6 +6,7 @@
 
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="Content/docs.min.css" rel="stylesheet" />
+    <link href="Content/toastr.min.css" rel="stylesheet" />
     <link href="Content/my-style.css" rel="stylesheet" />
 
 </head>
@@ -58,7 +59,8 @@
     <script src="Scripts/angular-mocks.js"></script>  <!--for testing-->
     <script src="Scripts/angular-ui/ui-bootstrap.min.js"></script>
     <script src="Scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
-    
+
+    <script src="Scripts/toastr.min.js"></script>
 
     <script src="app/app.js"></script>
     <script src="app/config/router.js"></script>
