--- a/WebUI.v1/index.html
+++ b/WebUI.v1/index.html
@@ -13,14 +13,20 @@
 <body style="background-color:#e3f2fd;">
     <div class="container-fluid">
         <!-- Static navbar -->
-        <nav class="navbar navbar-fixed-top" style="background-color:#4daff7;">
+        <nav class="navbar navbar-default navbar-fixed-top" style="background-color:#4daff7;">
             <div class="container">
                 <div class="navbar-header">
                     <img src="imgs/city-of-chicago-logo.png" style="margin-left:-60px" />
                 </div>
+                <div class="navbar-right" style="margin-top:10px;margin-right:10px;">
+                    <a class="btn btn-primary" ui-sref="dashboard">
+                        Login
+                    </a>
+                </div>
             </div>
         </nav>
         <div class="container" style="margin-top:60px;">
+            
             <div class="row">
                 <div class="col-lg-12">
                     <ui-view></ui-view> 
