--- a/WebUI.v1/index.html
+++ b/WebUI.v1/index.html
@@ -18,9 +18,9 @@
                 <div class="navbar-header">
                     <img src="imgs/city-of-chicago-logo.png" style="margin-left:-60px" />
                 </div>
-                <div class="navbar-right" style="margin-top:10px;margin-right:10px;">
-                    <a class="btn btn-primary" ui-sref="dashboard">
-                        Login
+                 <div class="navbar-right" style="margin-top:10px;margin-right:10px;">
+                    <a class="btn btn-primary" ui-sref="dashboard" id="dashboardBtn">
+                        Dashboard
                     </a>
                 </div>
             </div>
